@@ -18,6 +18,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19143: platform module now reads Windows version from kernel32.dll to
+  avoid compatibility shims.
+
 - Issue #25092: Fix datetime.strftime() failure when errno was already set to
   EINVAL.
 
